<resources>
    <string name="app_name">Thriftee</string>
    <string name="web_client_id">439681330441-i8m0l26slnaek26jmmsb4coo81h84rtd.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lewati">Lewati</string>
    <string name="next">Lanjut</string>
    <string name="beranda">Beranda</string>
    <string name="toko">Toko</string>
    <string name="history">History</string>
    <string name="akun">Akun</string>
    <string name="dropbox">Dropbox</string>
    <string name="voucher">Voucher</string>
    <string name="welcome">Silahkan Masuk</string>
    <string name="nomor_handphone">Nomor Handphone</string>
    <string name="password">Kata Sandi</string>
    <string name="forget_password">Lupa kata sandi?</string>
    <string name="login">Masuk</string>
    <string name="ask_for_account">Tidak punya akun?</string>
    <string name="register">Daftar</string>
    <string name="welcoming_text">Halo</string>
    <string name="yuk_mulai_rapikan_lemari_mu">Yuk mulai rapikan lemari mu</string>
    <string name="thriftee_points">Thriftee Points</string>
    <string name="top_up">top up</string>
    <string name="panduan_pilah">Panduan Pilah</string>
    <string name="kirim_pakaian">Kirim Pakaian</string>
    <string name="adoption">Adopsi</string>
    <string name="hiburan">Hiburan</string>
    <string name="thriftee_point">Thriftee Point</string>
    <string name="voucher_menarik">Voucher Menarik</string>
    <string name="voucher_page_subtitle">Temukan voucher menarik dan tukarkan poin mu!</string>
    <string name="setting">Pengaturan</string>
    <string name="about">Tentang</string>
</resources>