<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/root_padding"
    tools:context=".ui.auth.LoginFragment">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:src="@drawable/logo_thriftee"
        android:layout_marginTop="52dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/app_logo"
        app:layout_constraintStart_toStartOf="@id/app_logo"
        app:layout_constraintEnd_toEndOf="@id/app_logo"/>

    <TextView
        android:id="@+id/phone_number_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomor_handphone"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/phone_number_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@id/phone_number_title"
        app:layout_constraintStart_toStartOf="@id/phone_number_title"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/phone_number_field"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/password_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/password_title"
        app:layout_constraintStart_toStartOf="@id/phone_number_title"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/forget_password_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:padding="3dp"
        android:textStyle="bold"
        android:textColor="@color/primary_color"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/password_field"
        app:layout_constraintEnd_toEndOf="@id/password_field"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAllCaps="false"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/forget_password_btn"
        app:layout_constraintStart_toStartOf="@id/password_field"
        app:layout_constraintEnd_toEndOf="@id/password_field"/>

    <ImageView
        android:id="@+id/login_or_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/login_or"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        app:layout_constraintStart_toStartOf="@id/login_btn"
        app:layout_constraintEnd_toEndOf="@id/login_btn"/>

    <ImageView
        android:id="@+id/sign_in_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/sign_in_with_google"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/login_or_text"
        app:layout_constraintStart_toStartOf="@id/login_btn"
        app:layout_constraintEnd_toEndOf="@id/login_btn"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/sign_in_google"
        app:layout_constraintStart_toStartOf="@id/login_btn"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/ask_for_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_for_account"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:padding="5dp"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            android:textColor="@color/primary_color"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>